--- a/TinDog-Start-master/index.html
+++ b/TinDog-Start-master/index.html
@@ -6,7 +6,7 @@
   <title>TinDog</title>
 
   <!-- Google Fonts -->
-  <!-- <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu" rel="stylesheet">
   
   <link
     href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;900&family=Ubuntu:wght@300;400;700&display=swap"
