--- a/TinDog-Start-master/index.html
+++ b/TinDog-Start-master/index.html
@@ -169,6 +169,7 @@
             <p>5 Matches Per Day</p>
             <p>10 Messages Per Day</p>
             <p>Unlimited App Usage</p>
+            <p>&nbsp</p>
             <button class="btn btn-lg btn-block btn-outline-dark" type="button">Sign Up</button>
           </div>
         </div>
@@ -184,6 +185,7 @@
             <p>Unlimited Matches</p>
             <p>Unlimited Messages</p>
             <p>Unlimited App Usage</p>
+            <p>&nbsp</p>
             <button class="btn btn-lg btn-block btn-dark" type="button">Sign Up</button>
           </div>
         </div>
